--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-drag-and-drop": "^2.4.0",
@@ -44,6 +45,7 @@
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-search-input": "^0.11.3",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
     "redux-immutable-state-invariant": "^2.1.0",
