--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "html-webpack-plugin": "2.29.0",
     "immutability-helper": "^2.7.1",
     "jest": "20.0.4",
+    "jquery": "^3.3.1",
+    "jquery-ui-bundle": "^1.12.1-migrate",
     "lodash": "^4.17.10",
     "node-sass": "^4.9.2",
     "object-assign": "4.1.1",
@@ -59,7 +61,7 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
